# LLMRecSys_with_KnowledgeDistilation

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/autointkar/: autoint_distils.csv
experiments/multivae/baseline_bandle/: exp_0_MultiVAE_ml1m_01a.yaml
experiments/neumf/: exp_0_NeuMF_ml1m_0x.yaml  exp_1_NeuMF_ml1m_0x.yaml  exp_2_NeuMF_ACV_0x.yaml  neumf_distils_1.csv
experiments/neumf/00_exp_bandle_kar_ml1m/: exp_0_NeuMF_ml1m_00.yaml  exp_0_NeuMF_ml1m_01b.yaml  exp_0_NeuMF_ml1m_02b.yaml  exp_0_NeuMF_ml1m_02c.yaml
experiments/neumf/01_exp_bandle_kar_ml1m/: exp_0_NeuMF_ml1m_00v.yaml  exp_0_NeuMF_ml1m_02va.yaml  exp_0_NeuMF_ml1m_02vb.yaml
experiments/neumf/02_exp_bandle_kar_ml1m/: exp_0_NeuMF_ml1m_00v.yaml
experiments/neumf/03_exp_bandle_kar_ml1m/: exp_0_NeuMF_ml1m_00v.yaml  exp_0_NeuMF_ml1m_02va.yaml  exp_0_NeuMF_ml1m_02vb.yaml
experiments/neumf/04_exp_bandle_kar_ml1m/: exp_0_NeuMF_ml1m_01r_t1.yaml  exp_0_NeuMF_ml1m_01r_t2.yaml  exp_0_NeuMF_ml1m_01v_t2.yaml  neumf_distils_4.csv
experiments/neumf/05_exp_bandle_kar_avc/: exp_05_NeuMF_ACV_00r.yaml  exp_05_NeuMF_ACV_01r_I.yaml  exp_05_NeuMF_ACV_02r_I.yaml  (+2 more)
experiments/simplex/: exp_0_simpleX_ml1m_0x.yaml
knowledge_transfer_framework/: README.md  icdm_demo.ipynb  run_exps.py
knowledge_transfer_framework/models/: autointkar.py  dcnkar.py  deepfmkar.py  losses.py  twotowers.py
knowledge_transfer_framework/utils/: con_wrapper.py  gen_wrapper.py  journal.py  seq_wrapper.py  tmanager.py  utils.py  wrapper.py
models/: autointkar.py  dcnkar.py  losses.py
profile_generation/: README.md
(+100 files in other folders)
